# Oopart

./: CMakeLists.txt  README.md
include/: instructions.hpp  interpreter.hpp
source/: instructions.cpp  interpreter.cpp  main.cpp  object.cpp
